# HireSense-AI

./: .env.example  .gitignore  MODEL_SELECTION.md  README.md  pyproject.toml
app/: __init__.py  audio.py  config.py  interview_engine.py  llm.py  main.py  models.py  prompts.py  reporting.py  resume_parser.py  similarity.py
static/: app.js  styles.css
templates/: index.html  report.html
